z-index nav bar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ header {
 #nav.affix {
 	position: fixed;
 	top: 0;
-	z-index:10;
+	z-index:10000;
 	-webkit-transition: all .6s ease-in-out;
 }
 
